recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:10: error: not found: value schrink
    tree(steps-1,length*schrink,angle,shrink)
                        ^